welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (13<=a & a<=19 || 13<=b & b<=19 || 13<=c & c<=19)
  ^